remove auth middleware from refresh tokens route
